--- a/hola.html
+++ b/hola.html
@@ -48,6 +48,7 @@
         
         </p>
     </div>
+  <a href="actividad.rss">ACTIVIDAD</a>
     <div class="buceo">
       <h2 class="surf">SURF</h2>
       <img src="surf.jpg" alt="">
