--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <a class="enlace1" href="http://127.0.0.1:5500/Acercade.html">Acerca de</a>
       <a href="http://127.0.0.1:5500/contacto.html">Contacto</a>
       <a href="http://127.0.0.1:5500/productos.htm">Productos</a>
+       <a href="actividad.rss">RSS</a>
     </div>
     <div class="buceo">
       <h2>Buceo</h2>
@@ -48,7 +49,7 @@
         
         </p>
     </div>
-  <a href="actividad.rss">ACTIVIDAD</a>
+  
     <div class="buceo">
       <h2 class="surf">SURF</h2>
       <img src="surf.jpg" alt="">
