--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Noticias</title>
 </head>
 <body>
-    <a href="marca.rss">RSS</a>
+    <a href="channel.atom">ATOM</a>
     
     <h1>MARCA</h1>
     <div>
